load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "nbodygo/cmd/nbodygo",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/pkg/app:go_default_library",
        "//internal/pkg/camera:go_default_library",
        "//internal/pkg/core:go_default_library",
        "//internal/pkg/geometry:go_default_library",
        "//internal/pkg/gls:go_default_library",
        "//internal/pkg/graphic:go_default_library",
        "//internal/pkg/gui:go_default_library",
        "//internal/pkg/light:go_default_library",
        "//internal/pkg/material:go_default_library",
        "//internal/pkg/math32:go_default_library",
        "//internal/pkg/renderer:go_default_library",
        "//internal/pkg/util/helper:go_default_library",
        "//internal/pkg/window:go_default_library",
    ],
)

go_binary(
    name = "nbodygo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
