load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "graphic.go",
        "line_strip.go",
        "lines.go",
        "mesh.go",
        "points.go",
        "rigged_mesh.go",
        "skeleton.go",
        "skybox.go",
        "sprite.go",
    ],
    importpath = "nbodygo/internal/g3n/graphic",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/core:go_default_library",
        "//internal/pkg/geometry:go_default_library",
        "//internal/pkg/gls:go_default_library",
        "//internal/pkg/material:go_default_library",
        "//internal/pkg/math32:go_default_library",
        "//internal/pkg/texture:go_default_library",
        "//internal/pkg/util/logger:go_default_library",
    ],
)
