load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "basic.go",
        "material.go",
        "physical.go",
        "point.go",
        "standard.go",
    ],
    importpath = "nbodygo/internal/g3n/material",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/gls:go_default_library",
        "//internal/pkg/math32:go_default_library",
        "//internal/pkg/texture:go_default_library",
        "//internal/pkg/util/logger:go_default_library",
    ],
)
