load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "animator.go",
        "board.go",
        "texture2D.go",
    ],
    importpath = "nbodygo/internal/g3n/texture",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/gls:go_default_library",
        "//internal/pkg/math32:go_default_library",
        "//internal/pkg/util/logger:go_default_library",
    ],
)
