load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "audio_file.go",
        "doc.go",
        "listener-desktop.go",
        "player.go",
    ],
    cgo = True,
    importpath = "nbodygo/internal/pkg/audio",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/audio/al:go_default_library",
        "//internal/pkg/audio/ov:go_default_library",
        "//internal/pkg/core:go_default_library",
        "//internal/pkg/gls:go_default_library",
        "//internal/pkg/math32:go_default_library",
    ],
)
