load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "box.go",
        "cone-cylinder.go",
        "disk.go",
        "geometry.go",
        "morph.go",
        "plane.go",
        "sphere.go",
        "torus.go",
        "tube.go",
    ],
    importpath = "nbodygo/internal/pkg/geometry",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/gls:go_default_library",
        "//internal/pkg/math32:go_default_library",
        "//internal/pkg/util/logger:go_default_library",
    ],
)
