load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "build.go",
        "consts.go",
        "glapi.c",
        "glapi.h",
        "glcorearb.h",
        "gls.go",
        "gls-desktop.go",
        "program.go",
        "shaderdefines.go",
        "uniform.go",
        "vbo.go",
    ],
    cgo = True,
    clinkopts = select({
        "@io_bazel_rules_go//go/platform:android": [
            "-ldl",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "-framework OpenGL",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "-framework OpenGL",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "-ldl",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "-lopengl32",
        ],
        "//conditions:default": [],
    }),
    copts = select({
        "@io_bazel_rules_go//go/platform:android": [
            "-DGL_GLEXT_PROTOTYPES",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "-DGL_GLEXT_PROTOTYPES",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "-DGL_GLEXT_PROTOTYPES",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "-DGL_GLEXT_PROTOTYPES",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "-DGL_GLEXT_PROTOTYPES",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "-DGL_GLEXT_PROTOTYPES",
        ],
        "//conditions:default": [],
    }),
    importpath = "nbodygo/internal/pkg/gls",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/math32:go_default_library",
        "//internal/pkg/util/logger:go_default_library",
    ],
)
