load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "align.go",
        "builder.go",
        "builder_layout.go",
        "builder_panel.go",
        "button.go",
        "chart.go",
        "checkradio.go",
        "control_folder.go",
        "doc.go",
        "docklayout.go",
        "dropdown.go",
        "edit.go",
        "events.go",
        "filllayout.go",
        "folder.go",
        "gridlayout.go",
        "hboxlayout.go",
        "ilayout.go",
        "image.go",
        "image_button.go",
        "imagelabel.go",
        "itemscroller.go",
        "label.go",
        "list.go",
        "logger.go",
        "manager.go",
        "menu.go",
        "panel.go",
        "scrollbar.go",
        "scroller.go",
        "slider.go",
        "splitter.go",
        "style.go",
        "style_dark.go",
        "style_default.go",
        "style_light.go",
        "tabbar.go",
        "table.go",
        "tree.go",
        "util.go",
        "vboxlayout.go",
        "window.go",
    ],
    importpath = "nbodygo/internal/pkg/gui",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/core:go_default_library",
        "//internal/pkg/geometry:go_default_library",
        "//internal/pkg/gls:go_default_library",
        "//internal/pkg/graphic:go_default_library",
        "//internal/pkg/gui/assets:go_default_library",
        "//internal/pkg/gui/assets/icon:go_default_library",
        "//internal/pkg/material:go_default_library",
        "//internal/pkg/math32:go_default_library",
        "//internal/pkg/renderer/shaders:go_default_library",
        "//internal/pkg/text:go_default_library",
        "//internal/pkg/texture:go_default_library",
        "//internal/pkg/util/logger:go_default_library",
        "//internal/pkg/window:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
