load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["vorbisfile.go"],
    cgo = True,
    clinkopts = select({
        "@io_bazel_rules_go//go/platform:android": [
            "-lvorbisfile",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "-L/usr/lib -L/usr/local/lib -lvorbisfile",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "-L/usr/lib -L/usr/local/lib -lvorbisfile",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "-L/usr/lib -L/usr/local/lib -lvorbisfile",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "-lvorbisfile",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "-Linternal/pkg/audio/ov/internal/pkg/audio/windows/bin -llibvorbisfile",
        ],
        "//conditions:default": [],
    }),
    copts = select({
        "@io_bazel_rules_go//go/platform:android": [
            "-DGO_LINUX -I/usr/include/vorbis",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "-DGO_DARWIN -I/usr/include/vorbis -I/usr/local/include/vorbis",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "-DGO_FREEBSD -I/usr/include/vorbis -I/usr/local/include/vorbis",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "-DGO_DARWIN -I/usr/include/vorbis -I/usr/local/include/vorbis",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "-DGO_LINUX -I/usr/include/vorbis",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "-DGO_WINDOWS -Iinternal/pkg/audio/ov/internal/pkg/audio/windows/libvorbis-1.3.5/include/vorbis -Iinternal/pkg/audio/ov/internal/pkg/audio/windows/libogg-1.3.3/include",
        ],
        "//conditions:default": [],
    }),
    importpath = "nbodygo/internal/g3n/audio/ov",
    visibility = ["//:__subpackages__"],
)
