load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "collision.go",
        "contact.go",
        "matrix.go",
        "raycaster.go",
    ],
    importpath = "nbodygo/internal/g3n/experimental/collision",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/camera:go_default_library",
        "//internal/pkg/core:go_default_library",
        "//internal/pkg/geometry:go_default_library",
        "//internal/pkg/gls:go_default_library",
        "//internal/pkg/graphic:go_default_library",
        "//internal/pkg/material:go_default_library",
        "//internal/pkg/math32:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["matrix_test.go"],
    embed = [":go_default_library"],
)
