load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["al.go"],
    cgo = True,
    clinkopts = select({
        "@io_bazel_rules_go//go/platform:android": [
            "-lopenal",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "-L/usr/local/opt/openal-soft/lib -lopenal",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "-L/usr/local/lib -lopenal",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "-L/usr/local/opt/openal-soft/lib -lopenal",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "-lopenal",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "-Linternal/pkg/audio/al/internal/pkg/audio/windows/bin -lOpenAL32",
        ],
        "//conditions:default": [],
    }),
    copts = select({
        "@io_bazel_rules_go//go/platform:android": [
            "-DGO_LINUX -I/usr/include/AL",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "-DGO_DARWIN -I/usr/local/opt/openal-soft/include/AL -I/usr/include/AL",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "-DGO_FREEBSD -I/usr/local/include/AL",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "-DGO_DARWIN -I/usr/local/opt/openal-soft/include/AL -I/usr/include/AL",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "-DGO_LINUX -I/usr/include/AL",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "-DGO_WINDOWS -Iinternal/pkg/audio/al/internal/pkg/audio/windows/openal-soft-1.18.2/include/AL",
        ],
        "//conditions:default": [],
    }),
    importpath = "nbodygo/internal/pkg/audio/al",
    visibility = ["//:__subpackages__"],
)
