load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "broadphase.go",
        "debug.go",
        "doc.go",
        "forcefield.go",
        "logger.go",
        "material.go",
        "narrowphase.go",
        "particle.go",
        "simulation.go",
    ],
    importpath = "nbodygo/internal/pkg/experimental/physics",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/core:go_default_library",
        "//internal/pkg/experimental/collision:go_default_library",
        "//internal/pkg/experimental/collision/shape:go_default_library",
        "//internal/pkg/experimental/physics/constraint:go_default_library",
        "//internal/pkg/experimental/physics/equation:go_default_library",
        "//internal/pkg/experimental/physics/object:go_default_library",
        "//internal/pkg/experimental/physics/solver:go_default_library",
        "//internal/pkg/geometry:go_default_library",
        "//internal/pkg/gls:go_default_library",
        "//internal/pkg/graphic:go_default_library",
        "//internal/pkg/material:go_default_library",
        "//internal/pkg/math32:go_default_library",
        "//internal/pkg/util/logger:go_default_library",
    ],
)
