load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "template.go",
    ],
    importpath = "nbodygo/internal/pkg/gls/glapi2go",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "glapi2go",
    embed = [":go_default_library"],
    visibility = ["//:__subpackages__"],
)
