load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "gltf.go",
        "khr_materials_common.go",
        "khr_materials_pbr_specular_glossiness.go",
        "khr_materials_unlit.go",
        "loader.go",
        "logger.go",
        "material_pbr.go",
    ],
    importpath = "nbodygo/internal/pkg/loader/gltf",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/animation:go_default_library",
        "//internal/pkg/camera:go_default_library",
        "//internal/pkg/core:go_default_library",
        "//internal/pkg/geometry:go_default_library",
        "//internal/pkg/gls:go_default_library",
        "//internal/pkg/graphic:go_default_library",
        "//internal/pkg/material:go_default_library",
        "//internal/pkg/math32:go_default_library",
        "//internal/pkg/texture:go_default_library",
        "//internal/pkg/util/logger:go_default_library",
    ],
)
