load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "nbodygo/internal/pkg/tools/g3nicodes",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "g3nicodes",
    embed = [":go_default_library"],
    visibility = ["//:__subpackages__"],
)
