load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "box.go",
        "capsule.go",
        "cone.go",
        "convexhull.go",
        "cylinder.go",
        "heightfield.go",
        "plane.go",
        "shape.go",
        "sphere.go",
    ],
    importpath = "nbodygo/internal/g3n/experimental/collision/shape",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/experimental/collision:go_default_library",
        "//internal/pkg/geometry:go_default_library",
        "//internal/pkg/math32:go_default_library",
    ],
)
