load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "conetwist.go",
        "constraint.go",
        "distance.go",
        "hinge.go",
        "lock.go",
        "pointtopoint.go",
    ],
    importpath = "nbodygo/internal/g3n/experimental/physics/constraint",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/experimental/physics/equation:go_default_library",
        "//internal/pkg/math32:go_default_library",
    ],
)
