load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cone.go",
        "contact.go",
        "equation.go",
        "friction.go",
        "jacobian.go",
        "rotational.go",
        "rotationalmotor.go",
    ],
    importpath = "nbodygo/internal/g3n/experimental/physics/equation",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/pkg/math32:go_default_library"],
)
