load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["body.go"],
    importpath = "nbodygo/internal/pkg/experimental/physics/object",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/experimental/collision/shape:go_default_library",
        "//internal/pkg/graphic:go_default_library",
        "//internal/pkg/material:go_default_library",
        "//internal/pkg/math32:go_default_library",
    ],
)
